# sauva

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
docs/source/: cli.md  conf.py  index.rst  installation.md  modules.rst  sauva.core.dataset_manager.rst  sauva.core.rst  sauva.core.trainer.rst  sauva.models.on-the-fly.rst  sauva.models.qbc.rst  sauva.models.rst  sauva.rst  sauva.sampler.molecular_dynamics.rst  sauva.sampler.monte_carlo.rst  sauva.sampler.random_displacements.rst  sauva.sampler.rst  sauva.sampler.stochastic_process.rst
docs/source/_static/: custom.css
docs/source/_templates/: footer.html
docs/source/tutorial/: generating_samples.md  index.md  splitting_datasets.md
src/sauva/: __init__.py  _version.py  version.py
src/sauva/core/: dataset_manager.py  trainer.py
src/sauva/models/: __init__.py  on-the-fly.py  qbc.py
src/sauva/sampler/: molecular_dynamics.py  monte_carlo.py  random_displacements.py  stochastic_process.py
test/: conftest.py  test_dataset_manager.py  test_random_displacements.py  test_trainer.py
test/data/: dataset_MoS2.xyz  samples.xyz
tutorials/: 01_random_displacements.ipynb  02_dataset_manager.ipynb  03_trainer.ipynb
tutorials/data/raw/: Au_atom.xyz
tutorials/data/splits/: test_seed_876.xyz  valid_seed_876.xyz
