[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sauva"
dynamic = ["version"]
authors = [
  { name="Leandro Seixas Rocha", email="leandro.rocha@ilum.cnpem.br" },
]
description = "Sauva"
readme = "README.md"
license = "MIT" 
requires-python = ">=3.10"
dependencies = [
    'numpy>=2.0.0',
    'pandas',
    'ase',
    'torch',
    'scipy',
    'matplotlib',
    'pytest',
    'pyyaml',
    'mace-torch'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/seixas-research/sauva"
"Documentation" = "https://sauva.readthedocs.io/en/latest/"

[tool.hatch.build.targets.wheel]
core-metadata-version = "2.1"

[tool.hatch.build.targets.sdist]
core-metadata-version = "2.1"

[tool.hatch.version]
path = "src/sauva/version.py"
